# danos

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  limine.cfg  linker.ld
.cache/clangd/index/: limine.h.1DD27E2CB8EEADE9.idx  main.cpp.724A13C3977B2BAF.idx  tty.hpp.101909DB88A9A3B6.idx
include/: printf.h  tty.hpp
kernel/: CMakeLists.txt  main.cpp  printf.cpp
